# IT4320-Project3

./: .coveragerc  .dockerignore  .env.example  .gitignore  .pylintrc  CONTRIBUTING.md  Dockerfile  README.md  app.py  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  stock_symbols.json  streamlit_app.py
.github/workflows/: ci.yml  pylint.yml
src/: __init__.py  api_client.py  cache_manager.py  chart_generator.py  constants.py  data_processor.py  input_validator.py
templates/: error.html  index.html  result.html
tests/: __init__.py  test_api_client.py  test_input_validator.py  test_main_flow.py
